bluec-tests/tests/invalid/types_longdouble/invalid_type_specifier_3.c
int main(void) {
    /* "long double double" is not a valid type specifier */
    long double double f = 10.0L;
    return 0;
}